@@ -51,7 +51,7 @@
 1.1.3
 -----
  1. (Hopefully) fix selection order of items - and order added to playqueue.
- 2. Updated German translation.
+ 2. Updated translations: German, Spanish.
  3. Add Russian translation, thanks to Julia Dronova.
  4. Online services support does not require taglib.
  5. Fix changing of Music folder for 'Personal' mpd collection.
@@ -67,6 +67,7 @@
 11. Bind increase volume, decrease volume, and mute actions to main window, so
     that shortcuts work.
 12. Fix number display in replaygain dialog in Qt-only builds.
+13. When reading default MPD music folder, ensure this has a trailing slash.
 
 1.1.2
 -----
